Added support for custom java agents